--- a/app/views/admin/dashboard/people.html.erb
+++ b/app/views/admin/dashboard/people.html.erb
@@ -11,7 +11,7 @@
                     <% @lead_users.each do |volunteer| %>
                         <div class="card">
                         <div class="people-info">
-                        <strong>Full name:</strong> <%= volunteer.full_name %>
+                        <strong>Full name:</strong>     <%= link_to edit_user_path(volunteer) do %> <%= volunteer.full_name %> <%end%>
                         <br>
                         <strong>Email:</strong> <%= volunteer.email %>
                         <br>
@@ -23,6 +23,12 @@
                            <%= select_tag "user_category", "<option>General Volunteer</option><option>Guest</option>".html_safe, class:"btn btn-success dropdown-toggle" %>
                         <%= submit_tag "Submit", class:"btn btn-primary" %>
                         <% end %>
+                        <%= link_to('Delete User',
+                          user_path(volunteer),
+                          data: {confirm: 'Are you sure?'},
+                          method: :delete,
+                          style:"color:red;"
+                          ) %>
                        </div>
                      </div>
                     <% end %>
@@ -32,11 +38,14 @@
                     <% @gen_vol_users.each do |volunteer| %>
                         <div class="card">
                         <div class="people-info">
-                        <strong>Full name:</strong> <%= volunteer.full_name %>
+
+                        <strong>Full name:</strong>     <%= link_to edit_user_path(volunteer) do %> <%= volunteer.full_name %>
+                        <% end %>
                         <br>
                         <strong>Email:</strong> <%= volunteer.email %>
                         </div>
                         User Category:  <span style="color:green"> <%=volunteer.user_category.name %></span>
+                      
 
                         <%= form_tag("upcat/#{volunteer.id}", method: :patch) do %>
                         <div class="field pb-1 pl-2" style="border-bottom: 1px solid grey">
@@ -44,6 +53,12 @@
                            <%= select_tag "user_category", "<option>Guest</option><option>Team Lead</option>".html_safe, class:"btn btn-success dropdown-toggle" %>
                         <%= submit_tag "Submit", class:"btn btn-primary" %>
                         <% end %>
+                                <%= link_to('Delete User',
+                                   user_path(volunteer),
+                                   data: {confirm: 'Are you sure?'},
+                                   method: :delete,
+                                   style:"color:red;"
+                                 ) %>
                        </div>
                      </div>
                     <% end %>
